Reseller Access Report
- adiciona relatório de acesso das revendas
- atualiza dependências

This close #696

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -207,6 +207,12 @@
           <a href="#">Relatórios</a>
           <ul>
             <li>
+              <a href="{% url 'reseller_access_report' %}">
+                <i class="fa fa-list-alt"></i>
+                <span>Acessos Revendas</span>
+              </a>
+            </li>
+            <li>
               <a href="{% url 'dashboard_report' %}">
                 <i class="fa fa-download"></i>
                 <span>Todos os relarórios</span>
