--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -16,10 +16,10 @@
     <!-- Panel Start -->
     <div class="panel profile-cover">
       <div class="profile-cover__img">
-        {% if usuario.avatar.url is None %}
-          <img src="{% static 'assets/img/avatars/01_150x150.png' %}" alt="" class="rounded-circle">
-        {% else %}
+        {% if usuario.avatar %}
           <img src="{{ usuario.avatar.url }}" alt="" class="rounded-circle" style="object-fit: cover; height: 120px;">
+        {% else %}
+          <img src="{% static 'assets/img/avatars/01_150x150.png' %}" alt="" class="rounded-circle">
         {% endif %}
         {% if user.first_name %}
           <h3 class="h3">{{ user.first_name|safe }}</h3>
