--- a/templates/products/update.html
+++ b/templates/products/update.html
@@ -233,6 +233,22 @@
                   </div>
                 </div>
               </div>
+
+              <div class="form-group row">
+                <span class="label-text col-md-3 col-form-label">Fora de estoque:</span>
+
+                <div class="col-md-1">
+                  <div class="input-group">
+                      {{ form.fora_de_estoque }}
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="input-group">
+                      <p>Se selecionado, exibe o produto, mas não permite comprar.</p>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <!-- Tab Pane End -->
 
